spade-tests/src/snapshots/spade_tests__ast_lowering__generics_given_for_generic_type.snap
---
source: spade-tests/src/ast_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Generic arguments given for a generic type
  ┌─ testinput:2:17
  │
1 │ enum Test<T, U> {
  │           - T is a generic type
2 │     B { value: T<U> },
  │                 ^^^ Generic arguments not allowed here


